added news documentation
